refactor: remove voice feature
